--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "fable-utils": "1.0.4",
     "loglevel": "1.4.1",
     "webpack": "3.5.6",
-    "webpack-dev-server": "2.7.1"
+    "webpack-dev-server": ">=3.1.11"
   }
 }
